# GRPO-Ratatouille

./: .gitignore  README.md  grpo-qwen-2.5-3b-deepseek-r1-countdown.yaml  pyproject.toml  run_r1_grpo.py
tests/: test_generic_utils.py  test_inference_requester.py
utils/: generic_utils.py  inference_requester.py
