[project]
name = "rat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "deepspeed>=0.16.3",
    "hf-transfer>=0.1.9",
    "openai>=1.61.0",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "tensorboard>=2.18.0",
    "torch==2.5.1",
    "transformers>=4.48.2",
    "trl==0.14.0",
    "vllm>=0.7.3",
]
